vẽ chart cho OrderOperation